--- a/index.html
+++ b/index.html
@@ -15,8 +15,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
+
+    <style>
+        :root {
+            --background-color: white;
+        }
+    </style>
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav id="navbar">
+        <div class="navbar__logo">
+            <i class="fab fa-diaspora"></i>
+            <a href="#">Ahn</a>
+        </div>
+        <div>
+            <ul class="navbar__menu">
+                <li class="navber__menu__item">Home</li>
+                <li class="navber__menu__item">About</li>
+                <li class="navber__menu__item">Skills</li>
+                <li class="navber__menu__item">Work</li>
+                <li class="navber__menu__item">Contact</li>
+            </ul>
+        </div>
+    </nav>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
 </body>
 </html>
