--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +23,7 @@
         }
     </style>
 </head>
+
 <body>
     <!-- Navbar -->
     <nav id="navbar">
@@ -39,6 +41,13 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/profile.jpg" alt="Ahn's profile photo" class="home__avatar" />
+        <h1 class="home__title">Hello, <br> I'm developer Ahn</h1>
+        <h2 class="home__description">A Software Engineer currently residing in Seoul, Korea.</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
@@ -48,4 +57,5 @@
     <!-- Contact -->
     <section id="contact"></section>
 </body>
+
 </html>
