--- a/index.html
+++ b/index.html
@@ -41,15 +41,74 @@
             </ul>
         </div>
     </nav>
+
     <!-- Home -->
     <section id="home">
         <img src="imgs/profile.jpg" alt="Ahn's profile photo" class="home__avatar" />
-        <h1 class="home__title">Hello, <br> I'm developer Ahn</h1>
+        <h1 class="home__title">Hello, <br /> I'm developer Ahn</h1>
         <h2 class="home__description">A Software Engineer currently residing in Seoul, Korea.</h2>
         <button class="home__contact">Contact Me</button>
     </section>
+
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <!-- 내가 말하고 싶은, 나를 어필할 수 있는 문장들 프론트엔드 몇 년정도 개발해왔고 백엔드도 관심이 많고 이런 프로젝트들을 해왔다 같은 두 세문장 -->
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio eveniet, quisquam sed distinctio totam
+            tempore consequatur odit, sunt possimus nesciunt excepturi! Eveniet tenetur perspiciatis vitae rem accusamus
+            ex suscipit? Laboriosam?</p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-square-js"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">
+                    HTML, CSS, JavaScript,
+                    <br /> Vue, Web APIs
+                </div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-android"></i>
+                </div>
+                <div class="major__title">Mobile</div>
+                <div class="major__description">
+                    Android, Kotlin
+                </div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fa-brands fa-mdb"></i>
+                </div>
+                <div class="major__title">MDB Bootstrap</div>
+                <div class="major__description">
+                    MDB Bootstrap, BEM
+                </div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="/imgs/jobs/logo-uns.png" alt="UNS" class="job__logo">
+                <p class="job__name">
+                    Currently working at U&S Networks as Software Engineer
+                </p>
+                <p class="job__period">
+                    2021 Dec - Until now
+                </p>
+            </div>
+            <div class="job">
+                <img src="/imgs/jobs/logo-uns.png" alt="UNS" class="job__logo">
+                <p class="job__name">
+                    Currently working at U&S Networks as Software Engineer
+                </p>
+                <p class="job__period">
+                    2021 Dec - Until now
+                </p>
+            </div>
+        </div>
+    </section>
+
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
