--- a/index.html
+++ b/index.html
@@ -171,7 +171,67 @@
     </section>
 
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">
+                All
+                <span class="category__count">5</span>
+            </button>
+            <button class="category__btn">
+                Front-end
+                <span class="category__count">1</span>
+            </button>
+            <button class="category__btn">
+                Back-end
+                <span class="category__count">1</span>
+            </button>
+            <button class="category__btn">
+                Mobile
+                <span class="category__count">3</span>
+            </button>
+        </div>
+
+        <div class="work__projects">
+            <a href="https://github.com/annnhs" target="blank" class="project">
+                <img class="project__img" src="imgs/projects/project1.png" alt="project1">
+                <div class="project__description">
+                    <h3>Project1</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/annnhs" target="blank" class="project">
+                <img class="project__img" src="imgs/projects/project2.png" alt="project2">
+                <div class="project__description">
+                    <h3>Project2</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/annnhs" target="blank" class="project">
+                <img class="project__img" src="imgs/projects/project3.png" alt="project3">
+                <div class="project__description">
+                    <h3>Project3</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/annnhs" target="blank" class="project">
+                <img class="project__img" src="imgs/projects/project4.png" alt="project4">
+                <div class="project__description">
+                    <h3>Project4</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a href="https://github.com/annnhs" target="blank" class="project">
+                <img class="project__img" src="imgs/projects/project5.png" alt="project5">
+                <div class="project__description">
+                    <h3>Project5</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+        </div>
+    </section>
+
     <!-- Contact -->
     <section id="contact"></section>
 </body>
