--- a/index.html
+++ b/index.html
@@ -233,7 +233,19 @@
     </section>
 
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">hoseong1218@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/annnhs" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fab fa-linkedin-square"></i>
+            </a>
+        </div>
+        <p class="contact__rights">2022 Ahn - All rights reserved</p>
+    </section>
 </body>
 
 </html>
