--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
         <h1 class="contact__title">Let's talk</h1>
         <h2 class="contact__email">hoseong1218@gmail.com</h2>
         <div class="contact__links">
-            <a href="https://github.com/annnhs" target="_blank">
+            <a href="https://github.com/annnhs" target="blank">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="#" target="_blank">
+            <a href="#" target="blank">
                 <i class="fab fa-linkedin-square"></i>
             </a>
         </div>
